# FileXdb.py

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
filexdb/: __init__.py  collection.py  database.py  document.py  fileio.py
test/: test_collection.py  test_database.py
