[metadata]
name = filexdb
version = attr: filexdb.__version__
author = Sam (AcePic Studio)
author_email = biswassamrat903@gmail.com
description = A lightweight local NoSQL database
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FileXdb/FileXdb-Python
project_urls =
    Homepage = https://github.com/FileXdb/FileXdb-Python
    Repository = https://github.com/FileXdb/FileXdb-Python
    Bug Tracker = https://github.com/FileXdb/FileXdb-Python/issues
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages = find:
python_requires = >=3.7

